# transcribe_wma

./: Dockerfile  README.md  main.py  pyproject.toml  upload.sh
app/routes/: auth.py  upload.py
app/static/: styles.css
app/templates/: login.html  result.html  upload.html
app/utils/: audio_processing.py  auth_utils.py
transcribe/: main.py
